Bug 428484 - kmymoney build with alkimia 8.0.4 uses resource files from alkimia, not kmymoney
Summary: kmymoney build with alkimia 8.0.4 uses resource files from alkimia, not kmymoney
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: General (other bugs)
Version First Reported In: 8.0.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-30 22:25 UTC by Ralf Habacker
Modified: 2020-10-30 22:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.0.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-10-30 22:25:18 UTC
STEPS TO REPRODUCE
1. Compile kmymoney with alkimia 8.0.4
2. start kmymoney
3. inspect over view page

OBSERVED RESULT
The overview page looks incomplete (wrong colors, no visible blocks)
Running  

   strace -e trace=file kmymoney 2>&1 | grep html/kmymoney.css

shows that kmymoney searches for files in the wrong appdata directory

   access("/usr/share/kde4/apps/alkimia/html/kmymoney.css", R_OK) = -1 ENOENT (No such file or directory)


EXPECTED RESULT
kmymoney should use the correct app data directory

SOFTWARE/OS VERSIONS
Linux: openSUSE_Leap_15.1 
KDE Frameworks Version: 4.14
Qt Version: 4.8.7
Comment 1 Dawid Wróbel 2020-10-30 22:27:54 UTC
We should switch to shipping all the resources as QResource items, avoiding issues with their location on filesystem. This is especially problematic with Windows, macOS and AppImage builds.
Comment 2 Ralf Habacker 2020-10-30 22:34:16 UTC
Git commit ff57d7bdbf907deae24583c16f38153f9e10d463 by Ralf Habacker.
Committed on 30/10/2020 at 22:33.
Pushed by habacker into branch '8.0'.

Do not override the global translation domain of the application
FIXED-IN:8.0.5

M  +3    -1    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/commit/ff57d7bdbf907deae24583c16f38153f9e10d463
Comment 3 Jack 2020-10-30 22:55:14 UTC
Will this affect a Linux build, or just the more packaged build types mentioned in Comment #1?