Do not override the global translation domain of the application

BUG:428484
FIXED-IN:8.0.5