src/alkonlinequoteswidget.cpp
@@ -40,7 +40,6 @@
 #include <knewstuff3/uploaddialog.h>
 
 #if QT_VERSION < QT_VERSION_CHECK(5,0,0)
-static KComponentData alk(TRANSLATION_DOMAIN);
 #include <klocale.h>
 static KLocale _locale(TRANSLATION_DOMAIN);
 #define i18nc(context, text) ki18nc(context, text).toString(&_locale)
@@ -115,6 +114,9 @@ AlkOnlineQuotesWidget::Private::Private(bool showProfiles, bool showUpload, QWid
     , m_failIcon(BarIcon("dialog-cancel"))
     , m_webPageDialog(nullptr)
 {
+#if QT_VERSION < QT_VERSION_CHECK(5,0,0)
+    static KComponentData alk(TRANSLATION_DOMAIN);
+#endif
     setupUi(parent);
 
     profilesGroupBox->setVisible(showProfiles);
